# Neural-Gym

./: .gitattributes  .gitignore  LICENSE  README.md  dopamine_replay_buffer.pkl  dopamine_sb3_buffer.npz  pyproject.toml
data/dopamine_level/mouse_dlight-chrimson-1/: data.npz  data.pickle  mouse_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-1/trial_0/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-1/trial_1/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-1/trial_10/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-1/trial_11/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-1/trial_12/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-1/trial_13/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-1/trial_2/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-1/trial_3/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-1/trial_4/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-1/trial_5/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-1/trial_6/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-1/trial_7/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-1/trial_8/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-1/trial_9/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-2/: data.npz  data.pickle  mouse_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-2/trial_0/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-2/trial_1/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-2/trial_2/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-2/trial_3/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-2/trial_4/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-2/trial_5/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-2/trial_6/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/: data.npz  data.pickle  mouse_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_0/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_1/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_10/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_11/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_12/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_13/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_14/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_15/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_16/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_17/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_18/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_19/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_2/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_3/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_4/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_5/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_6/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_7/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_8/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-3/trial_9/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-4/: data.npz  data.pickle  mouse_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-4/trial_0/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-4/trial_1/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-5/: data.npz  data.pickle  mouse_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-5/trial_0/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-5/trial_1/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-5/trial_10/: data.npz  data.pickle  trial_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-5/trial_11/: data.npz  (+2 more)
data/dopamine_level/mouse_dlight-chrimson-6/: data.npz  data.pickle  mouse_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-8/: data.npz  data.pickle  mouse_rb.pkl
data/dopamine_level/mouse_dlight-chrimson-9/: data.npz  data.pickle  mouse_rb.pkl
data/dopamine_level/mouse_dls-dlight-1/: data.npz  data.pickle  mouse_rb.pkl
data/dopamine_level/mouse_dls-dlight-2/: data.npz  data.pickle  mouse_rb.pkl
data/dopamine_level/mouse_dls-dlight-3/: data.npz  data.pickle  mouse_rb.pkl
data/dopamine_level/mouse_dls-dlight-4/: data.npz  data.pickle  mouse_rb.pkl
data/dopamine_level/mouse_dls-dlight-5/: data.npz  data.pickle  mouse_rb.pkl
data/dopamine_level/mouse_dls-dlight-7/: data.npz  data.pickle  mouse_rb.pkl
neuralgym/: __init__.py  dopamine_level.py  fuzzy_mujoco.py  replay_buffer.py  utils.py
neuralgym/envs/: __init__.py  mousedopamine_v1.py
neuralgym/wrappers/: __init__.py  dist_reward_wrapper.py
scripts/: analyze_dopamine_data.py  process_dopamine_data.py
(+399 files in other folders)
