[project]
name = "neuralgym"
version = "2025.03.19.dev1"
description = "A gym library for computational neural science."
authors = [{ name = "Feiyang Wu", email = "feiyangwu@gatech.edu" }]
license = "MIT"
requires-python = ">=3.10"
readme = "README.md"

dependencies = ["gymnasium>=0.29.1", "mujoco", "numpy", "torch", "scipy"]

keywords = [
    "reinforcement-learning",
    "distributional-rl",
    "pytorch",
    "mujoco",
    "gymnasium",
    "machine-learning",
    "deep-learning",
    "neural-networks",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/BRAINML-GT/Neural-Gym"
Repository = "https://github.com/BRAINML-GT/Neural-Gym"


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "isort",
    "pre-commit",
    "ruff",
    "pytest-xdist",
]

docs = ["sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints", "myst-parser"]

examples = ["matplotlib", "seaborn", "jupyter", "ipywidgets"]

[build-system]
requires = ["scikit-build-core>=0.8.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["neuralgym"]
cmake.minimum-version = "3.15"
cmake.source-dir = "."
cmake.build-type = "Release"
sdist.include = ["CMakeLists.txt"]


[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I", "W", "C", "B", "S", "T", "Q"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=neuralgym"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
